--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ ul{
     list-style-type: none;
     width: 100%;
 }
-.item-lista-texto{
+.texto-data{
     font-size: 12px;
     line-height: 20px;
 }
